# ort-testing-backend

./: .env.dist  .gitignore  manage.py  pyproject.toml
ort_testing/: asgi.py  settings.py  urls.py  wsgi.py
tests_storage/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
tests_storage/migrations/: 0001_initial.py
